--- a/Quiz.js.html
+++ b/Quiz.js.html
@@ -102,11 +102,28 @@
     // TODO 4: Declare disable & enable functions to set or remove the "disabled" attribute from a given button element
     // disable(button) should set the button element's attribute "disabled" to the value ""
     // enable(button) should remove the attribute "disabled" from the button element
+    
+    const disable = (button) => {
+       button.setAttribute("disabled", "");    
+    }
 
+    const enable = (button) => {
+        button.removeAttribute("disabled")    
+    }
 
     // TODO 5: Declare an isCorrect function that compares a guess to the right answer
     // isCorrect(guess) should return true if the guess matches the fact's answer
-    
+
+    /*isCorrect = (guess) => guess === fact {
+        return true
+    }
+    */
+
+    function isCorrect(guess) {
+        if (guess === fact) {
+            return true;
+        }
+    }
 
 
     // TODO 6A: Use a for loop to add a click event listener to each of the optionButtons
