add alternative isCorrect function

--- a/Quiz.js.html
+++ b/Quiz.js.html
@@ -119,10 +119,15 @@
     }
     */
 
-    function isCorrect(guess) {
+    /*function isCorrect(guess) {
         if (guess === fact) {
             return true;
         }
+    }
+    */
+
+    function isCorrect (guess) {
+        return guess === fact.answer;
     }
 
 
