correct original isCorrect function

--- a/Quiz.js.html
+++ b/Quiz.js.html
@@ -119,17 +119,17 @@
     }
     */
 
-    /*function isCorrect(guess) {
-        if (guess === fact) {
+    function isCorrect(guess) {
+        if (guess === fact.answer) {
             return true;
         }
     }
-    */
+    
 
-    function isCorrect (guess) {
+    /*function isCorrect (guess) {
         return guess === fact.answer;
     }
-
+    */
 
     // TODO 6A: Use a for loop to add a click event listener to each of the optionButtons
             // TODO 6B: Within the event handler function, display the fact's explanation by setting the text of the explanation element
